@@ -14,6 +14,7 @@ Enhancements::
 Improvements::
 
 * extract shared `smallcaps` method from `TextTransform#smallcaps_pcdata` to make it easier to override
+* assign node to `@node` instance variable on table instance to make it easer to access from Prawn::Table extension (#2471)
 
 Bug Fixes::
 
